unpackaged/main/default/objects/Dassault_Reports_Direct__c/Dassault_Reports_Direct__c.object-meta.xml
<CustomObject>
    <label>Dassault Direct Renewal Data</label>
    <nameField>
        <label>Dassault Direct Renewal Report</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Dassault Direct Renewal Data</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>