unpackaged/main/default/objects/Dassault_Reports_Direct__c/fields/Customer_Country__c.field-meta.xml
<CustomField>
    <fullName>Customer_Country__c</fullName>
    <label>Customer Country</label>
    <length>255</length>
    <type>Text</type>
</CustomField>