unpackaged/main/default/objects/Dassault_Reports_Direct__c/fields/Customer_Industry__c.field-meta.xml
<CustomField>
    <fullName>Customer_Industry__c</fullName>
    <label>Customer Industry</label>
    <length>255</length>
    <type>Text</type>
</CustomField>