unpackaged/main/default/objects/Dassault_Reports_Direct__c/fields/Customer_name__c.field-meta.xml
<CustomField>
    <fullName>Customer_name__c</fullName>
    <label>Customer name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>