unpackaged/main/default/objects/Dassault_Reports_Direct__c/fields/Estimated_Margin__c.field-meta.xml
<CustomField>
    <fullName>Estimated_Margin__c</fullName>
    <formula>Estimated_Sales_Price__c - Total_Value_of_Order__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Estimated Margin</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>