unpackaged/main/default/objects/Dassault_Reports_Direct__c/fields/Estimated_Sales_Price__c.field-meta.xml
<CustomField>
    <fullName>Estimated_Sales_Price__c</fullName>
    <formula>IF(  Revenue_Type__c = "ALC",  Total_Value_of_Order__c /80 * 100,
IF(  Revenue_Type__c = "YLC",  Total_Value_of_Order__c /70 * 100, 
IF(  Revenue_Type__c = "QLC",  Total_Value_of_Order__c /70 * 100,0)))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Estimated Sales Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>