unpackaged/main/default/objects/Dassault_Reports_Direct__c/fields/IB_Number__c.field-meta.xml
<CustomField>
    <fullName>IB_Number__c</fullName>
    <label>IB  Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>