unpackaged/main/default/objects/Dassault_Reports_Direct__c/fields/Internal_Amount_Billed__c.field-meta.xml
<CustomField>
    <fullName>Internal_Amount_Billed__c</fullName>
    <label>Internal Amount Billed</label>
    <length>255</length>
    <type>Text</type>
</CustomField>