unpackaged/main/default/objects/Dassault_Reports_Direct__c/fields/Internal_Opp_No__c.field-meta.xml
<CustomField>
    <fullName>Internal_Opp_No__c</fullName>
    <label>Internal Opp No</label>
    <length>255</length>
    <type>Text</type>
</CustomField>