unpackaged/main/default/objects/Dassault_Reports_Direct__c/fields/Item_Trigram__c.field-meta.xml
<CustomField>
    <fullName>Item_Trigram__c</fullName>
    <label>Item Trigram</label>
    <length>255</length>
    <type>Text</type>
</CustomField>