unpackaged/main/default/objects/Dassault_Reports_Direct__c/fields/Monthly_Sales_Price__c.field-meta.xml
<CustomField>
    <fullName>Monthly_Sales_Price__c</fullName>
    <formula>( Estimated_Sales_Price__c / Support_Year__c ) / 12</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Monthly Sales Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>