unpackaged/main/default/objects/Dassault_Reports_Direct__c/fields/Net_Annual_Amount__c.field-meta.xml
<CustomField>
    <fullName>Net_Annual_Amount__c</fullName>
    <label>Net Annual Amount</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>