unpackaged/main/default/objects/Dassault_Reports_Direct__c/fields/Order_type__c.field-meta.xml
<CustomField>
    <fullName>Order_type__c</fullName>
    <label>Order type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>