unpackaged/main/default/objects/Dassault_Reports_Direct__c/fields/Revenue_Type__c.field-meta.xml
<CustomField>
    <fullName>Revenue_Type__c</fullName>
    <label>Revenue Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>