unpackaged/main/default/objects/Dassault_Reports_Direct__c/fields/Support_End_Date__c.field-meta.xml
<CustomField>
    <fullName>Support_End_Date__c</fullName>
    <label>Support End Date</label>
    <type>Date</type>
</CustomField>