unpackaged/main/default/objects/Dassault_Reports_Direct__c/fields/Support_Year__c.field-meta.xml
<CustomField>
    <fullName>Support_Year__c</fullName>
    <label>Support Year</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>