unpackaged/main/default/objects/Dassault_Reports_Direct__c/fields/Total_Value_of_Order__c.field-meta.xml
<CustomField>
    <fullName>Total_Value_of_Order__c</fullName>
    <label>Total Value of Order</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>